RESOLVED FIXED 265070
REGRESSION (270723@main): [ iOS17 macOS Debug ] TestWebKitAPI.EvaluateJavaScript.JavaScriptInMissingFrameError is a consistent crash
https://bugs.webkit.org/show_bug.cgi?id=265070
Summary REGRESSION (270723@main): [ iOS17 macOS Debug ] TestWebKitAPI.EvaluateJavaSc...
Marta Darbinyan
Reported 2023-11-17 15:33:40 PST
Description: TestWebKitAPI.EvaluateJavaScript.JavaScriptInMissingFrameError is constantly crashing on iOS17 and macOS Debug ToT since 270723@main. History: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.EvaluateJavaScript.JavaScriptInMissingFrameError&style=debug Result: TestWebKitAPI.EvaluateJavaScript.JavaScriptInMissingFrameError SHOULD NEVER BE REACHED /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Source/WebKit/UIProcess/WebPageProxy.cpp(13238) : void WebKit::WebPageProxy::sendToWebPage(std::optional<FrameIdentifier>, F &&) [F = (lambda at /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Source/WebKit/UIProcess/WebPageProxy.cpp:13247:9)] 1 0x116063b7c WTFCrash 2 0x151bf6960 std::__1::span<unsigned char const, 18446744073709551615ul>::span[abi:v160006]<unsigned char const*>(unsigned char const*, unsigned long) 3 0x153a21d98 void WebKit::WebPageProxy::sendToWebPage<void WebKit::WebPageProxy::sendToProcessContainingFrame<Messages::WebPage::RunJavaScriptInFrameInScriptWorld, WebKit::WebPageProxy::runJavaScriptInFrameInScriptWorld(WebCore::RunJavaScriptParameters&&, std::__1::optional<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>, API::ContentWorld&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<WTF::RefPtr<API::SerializedScriptValue, WTF::RawPtrTraits<API::SerializedScriptValue>, WTF::DefaultRefDerefTraits<API::SerializedScriptValue>>, WebCore::ExceptionDetails>&&)>&&)::$_43>(std::__1::optional<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>, Messages::WebPage::RunJavaScriptInFrameInScriptWorld&&, WebKit::WebPageProxy::runJavaScriptInFrameInScriptWorld(WebCore::RunJavaScriptParameters&&, std::__1::optional<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>, API::ContentWorld&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<WTF::RefPtr<API::SerializedScriptValue, WTF::RawPtrTraits<API::SerializedScriptValue>, WTF::DefaultRefDerefTraits<API::SerializedScriptValue>>, WebCore::ExceptionDetails>&&)>&&)::$_43&&)::'lambda'(Messages::WebPage::RunJavaScriptInFrameInScriptWorld&)>(std::__1::optional<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>, Messages::WebPage::RunJavaScriptInFrameInScriptWorld&&) 4 0x15398ab68 void WebKit::WebPageProxy::sendToProcessContainingFrame<Messages::WebPage::RunJavaScriptInFrameInScriptWorld, WebKit::WebPageProxy::runJavaScriptInFrameInScriptWorld(WebCore::RunJavaScriptParameters&&, std::__1::optional<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>, API::ContentWorld&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<WTF::RefPtr<API::SerializedScriptValue, WTF::RawPtrTraits<API::SerializedScriptValue>, WTF::DefaultRefDerefTraits<API::SerializedScriptValue>>, WebCore::ExceptionDetails>&&)>&&)::$_43>(std::__1::optional<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>, Messages::WebPage::RunJavaScriptInFrameInScriptWorld&&, WebKit::WebPageProxy::runJavaScriptInFrameInScriptWorld(WebCore::RunJavaScriptParameters&&, std::__1::optional<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>, API::ContentWorld&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<WTF::RefPtr<API::SerializedScriptValue, WTF::RawPtrTraits<API::SerializedScriptValue>, WTF::DefaultRefDerefTraits<API::SerializedScriptValue>>, WebCore::ExceptionDetails>&&)>&&)::$_43&&) 5 0x15398a9b4 WebKit::WebPageProxy::runJavaScriptInFrameInScriptWorld(WebCore::RunJavaScriptParameters&&, std::__1::optional<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>, API::ContentWorld&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<WTF::RefPtr<API::SerializedScriptValue, WTF::RawPtrTraits<API::SerializedScriptValue>, WTF::DefaultRefDerefTraits<API::SerializedScriptValue>>, WebCore::ExceptionDetails>&&)>&&) 6 0x152f05d70 -[WKWebView _evaluateJavaScript:asAsyncFunction:withSourceURL:withArguments:forceUserGesture:inFrame:inWorld:completionHandler:] 7 0x152f03b64 -[WKWebView callAsyncJavaScript:arguments:inFrame:inContentWorld:completionHandler:] 8 0x1012230c0 EvaluateJavaScript_JavaScriptInMissingFrameError_Test::TestBody() 9 0x10145ff9c void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 10 0x1014171ac void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 11 0x1014170fc testing::Test::Run() 12 0x101418164 testing::TestInfo::Run() 13 0x1014192d4 testing::TestSuite::Run() 14 0x101426f74 testing::internal::UnitTestImpl::RunAllTests() 15 0x10146087c bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 16 0x101426948 bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 17 0x101426834 testing::UnitTest::Run() 18 0x1009ceb34 RUN_ALL_TESTS() 19 0x1009ceac8 TestWebKitAPI::TestsController::run(int, char**) 20 0x1013eb6a8 main 21 0x18ac310e0 start
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-17 15:34:32 PST
Charlie Wolfe
Comment 2 2023-11-19 14:43:43 PST
EWS
Comment 3 2023-11-28 10:56:43 PST
Committed 271225@main (cbb2b77e2a8d): <https://commits.webkit.org/271225@main> Reviewed commits have been landed. Closing PR #20731 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.