REGRESSION (270723@main): [ iOS17 macOS Debug  ] TestWebKitAPI.EvaluateJavaScript.JavaScriptInMissingFrameError is a consistent crash https://bugs.webkit.org/show_bug.cgi?id=265070 rdar://118583083

Reviewed by Pascoe.

This API test is passing an invalid frame identifier to `evaluateJavaScript:inFrame:`, so we trip over
the debug assertion I added in 270723@main. We should just remove it for now.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::sendToWebPage):

Canonical link: https://commits.webkit.org/271225@main